# ziko-st-toc

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  example.py  package-lock.json  package.json  publish.sh  pyproject.toml  setup.py  setup.py.txt
.devcontainer/: devcontainer.json
.github/: FUNDING.yml
.github/workflows/: publish.yml
demo/: main.py  requirements.txt
docs/: index.md  main.py
docs/.vitepress/: config.mts
docs/intro/: about.md  get-started.md  supports.md
scripts/: build.sh  dev.sh  link.sh  publish.sh
ziko_st_toc/: __init__.py  pyproject.toml
ziko_st_toc/frontend/: index.html  package-lock.json  package.json  vite.config.ts
ziko_st_toc/frontend/src/: index.js  index.ts.txt
