[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ziko-st-toc"
version = "0.0.1"
description = "Interactive Table of Contents component for Streamlit."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{ name = "zakaria elalaoui", email = "zakarialaoui10@gmail.com" }]
dependencies = ["streamlit >= 1.51"]

[project.optional-dependencies]
devel = [
  "wheel",
  "pytest==7.4.0",
  "playwright==1.48.0",
  "requests==2.31.0",
  "pytest-playwright-snapshot==1.0",
  "pytest-rerunfailures==12.0",
]

[tool.setuptools.packages.find]
include = ["ziko_st_toc*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
ziko_st_toc = ["frontend/build/**/*", "pyproject.toml"]
