[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ziko-st-toc"
version = "2.0.2"
description = "A Streamlit component that generates an interactive Table of Contents (TOC) with smooth scrolling and navigation."
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = "zakaria.elalaloui", email = "zakarialaoui10@gmail.com" }
]
license = { file = "LICENSE" }
requires-python = ">=3.7"

keywords = ["streamlit", "table-of-contents", "toc", "navigation", "zikojs"]

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: JavaScript",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing :: Markup :: HTML",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
]

dependencies = [
    "streamlit>=0.63"
]

[project.optional-dependencies]
devel = [
    "wheel",
    "pytest==7.4.0",
    "playwright==1.48.0",
    "requests==2.31.0",
    "pytest-playwright-snapshot==1.0",
    "pytest-rerunfailures==12.0"
]

[project.urls]
Source = "https://github.com/zikojs/ziko-st-toc"
Tracker = "https://github.com/zikojs/ziko-st-toc/issues"
Documentation = "https://ziko-st-toc.streamlit.app/"

# setuptools config
[tool.setuptools.packages.find]
include = ["ziko_st_toc*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
ziko_st_toc = ["frontend/build/**/*", "pyproject.toml"]

# # ✅ REQUIRED for Streamlit v2 components
# [tool.streamlit.components]
# "ziko-st-toc.ziko_st_toc" = { path = "ziko_st_toc", asset_dir = "frontend/build" }